# vindinium-bot

./: release.sh  vindinium-bot.cabal
app/: Main.hs  Util.hs
src/: Astar.hs  BFS.hs  Client.hs  Imports.hs  Path.hs
