name:                vindinium-bot
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Sergey Mironov
maintainer:          grrwlf@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable vindinium-bot
  main-is:             Main.hs

  other-extensions:    FlexibleContexts, ExistentialQuantification,
                       ScopedTypeVariables, DeriveGeneric, MultiWayIf, TemplateHaskell,
                       RecordWildCards, OverloadedStrings, LambdaCase, GeneralizedNewtypeDeriving

  build-depends:       base >=4.8 && <4.9,
                       stm,
                       mtl,
                       MonadRandom,
                       lens,
                       containers,
                       unordered-containers,
                       hashable,
                       text,
                       random,
                       mersenne-random-pure64,
                       directory,
                       heredocs,
                       pretty-show,
                       http-client,
                       http-types,
                       aeson,
                       astar,
                       heap,
                       transformers,
                       time,
                       filepath

  hs-source-dirs:      src,app,lib
  default-language:    Haskell2010
